{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 23,
  "lineage": "b8eef7d5-c8d0-0281-0dc2-1259cab6e9d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hsm_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019f95f906c09e357",
            "arn": "arn:aws:ec2:us-east-1:645255961018:instance/i-07e72a5ac180c3c13",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cloudhsm-poc-ec2-profile",
            "id": "i-07e72a5ac180c3c13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01d3cef825ee0b2d4",
            "private_dns": "ip-10-0-1-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.193",
            "public_dns": "ec2-13-218-23-216.compute-1.amazonaws.com",
            "public_ip": "13.218.23.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efba6988ca106ab9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062afce3d270ef38c",
            "tags": {
              "Name": "cloudhsm-poc-hsm-client"
            },
            "tags_all": {
              "Name": "cloudhsm-poc-hsm-client"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01547d3728c806fdb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_hsm_client",
            "aws_iam_role.ec2_hsm_client",
            "aws_security_group.ec2_client",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645255961018:internet-gateway/igw-04590977edb0f7481",
            "id": "igw-04590977edb0f7481",
            "owner_id": "645255961018",
            "tags": {
              "Name": "cloudhsm-poc-igw"
            },
            "tags_all": {
              "Name": "cloudhsm-poc-igw"
            },
            "vpc_id": "vpc-03ded445fda757994"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645255961018:route-table/rtb-0341a93f0b3fba0c3",
            "id": "rtb-0341a93f0b3fba0c3",
            "owner_id": "645255961018",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04590977edb0f7481",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudhsm-poc-public-rt"
            },
            "tags_all": {
              "Name": "cloudhsm-poc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ded445fda757994"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da50489d2278c6b1",
            "route_table_id": "rtb-0341a93f0b3fba0c3",
            "subnet_id": "subnet-062afce3d270ef38c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645255961018:security-group/sg-01547d3728c806fdb",
            "description": "HSM client EC2 - outbound to CloudHSM cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "General internet egress (SSM, package downloads)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01547d3728c806fdb",
            "ingress": [],
            "name": "cloudhsm-poc-ec2-client-sg",
            "name_prefix": "",
            "owner_id": "645255961018",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudhsm-poc-ec2-client-sg"
            },
            "tags_all": {
              "Name": "cloudhsm-poc-ec2-client-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ded445fda757994"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hsm_inbound_from_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "CloudHSM client traffic from EC2",
            "from_port": 2223,
            "id": "sgrule-2110931319",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06d50e2483d5694b6",
            "security_group_rule_id": "sgr-0980c6f007b2519aa",
            "self": false,
            "source_security_group_id": "sg-01547d3728c806fdb",
            "timeouts": null,
            "to_port": 2225,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cloudhsm_v2_cluster.main",
            "aws_security_group.ec2_client",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645255961018:subnet/subnet-0b9cded972698330a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9cded972698330a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "645255961018",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudhsm-poc-private-subnet"
            },
            "tags_all": {
              "Name": "cloudhsm-poc-private-subnet"
            },
            "vpc_id": "vpc-03ded445fda757994"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645255961018:subnet/subnet-062afce3d270ef38c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062afce3d270ef38c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "645255961018",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudhsm-poc-public-subnet"
            },
            "tags_all": {
              "Name": "cloudhsm-poc-public-subnet"
            },
            "vpc_id": "vpc-03ded445fda757994"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645255961018:vpc/vpc-03ded445fda757994",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e105ddfaa628ff6",
            "default_route_table_id": "rtb-0d5be230e210cfeef",
            "default_security_group_id": "sg-049c021504aa4f24d",
            "dhcp_options_id": "dopt-03221d5b493372f9c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ded445fda757994",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5be230e210cfeef",
            "owner_id": "645255961018",
            "tags": {
              "Name": "cloudhsm-poc-vpc"
            },
            "tags_all": {
              "Name": "cloudhsm-poc-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}